--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,43 @@
-/target/
-/allure-results/
-/test-output/
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# eclipse
+.classpath
+.project
+.settings/
+
+# java folders
+target/
+test-output/
+*.iml
+
+# nexus
+deploycmd.txt
+
+# Intellij
+.idea/
+
+# 
+pom.nexus.xml
+*.DS_Store
