--- a/src/test/resources/log4j_Config.properties
+++ b/src/test/resources/log4j_Config.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger = INFO, FILE,stdout,HTML
 
 # Redirect log messages to console
+log4j.appender.stdout.File=messages.log
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -25,3 +26,4 @@ log4j.appender.HTML.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
 log4j.appender.HTML.layout.Title=Application log
 log4j.appender.HTML.layout.LocationInfo=true
 log4j.appender.HTML.Append=false
+
