--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -63,20 +63,20 @@ jobs:
 
     # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+  #   - name: Autobuild
+  #     uses: github/codeql-action/autobuild@v2
 
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+  #   # ℹ️ Command-line programs to run using the OS shell.
+  #   # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
 
-    #   If the Autobuild fails above, remove it and uncomment the following three lines.
-    #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
+  #   #   If the Autobuild fails above, remove it and uncomment the following three lines.
+  #   #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-  - if: matrix.language == 'java'
-  name: Build Java
-  run: |
-    make bootstrap
-    make release
+  # - if: matrix.language == 'java'
+  # name: Build Java
+  # run: |
+  #   make bootstrap
+  #   make release
 
   # - run: |
     #     echo "Run, Build Application using script"
