--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.1.2</version>
+                        <version>${maven-surefire-plugin.vesion}</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>testng_RegressionSuite.xml</suiteXmlFile>
@@ -188,7 +188,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.9.3</version>
+                        <version>${maven-surefire-plugin.vesion}</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>
