codeql.xml update for Sarif file to create & auto Update .

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,6 +55,14 @@ jobs:
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
 
+        # Generate SARIF file during analysis
+      - name: Generate SARIF
+        id: generate-sarif
+        run: |
+          echo '{"version":"2.1.0","runs":[]}' > results.sarif
+          echo "::set-output name=sarif_file::results.sarif"
+          
+
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
@@ -109,7 +117,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # we've added a step to check if the SARIF file exists, and if not, it creates an empty SARIF file
+      # Check if SARIF file exists and create an empty SARIF file if not
       - name: Check if SARIF file exists
         run: 'test -f "results.sarif" || touch "results.sarif"'
 
