--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -118,14 +118,14 @@ jobs:
         uses: actions/checkout@v3
 
       # Check if SARIF file exists and create an empty SARIF file if not
-      - name: Check if SARIF file exists
-        run: 'test -f "results.sarif" || touch "results.sarif"'
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: results.sarif
-          # Optional category for the results
-          # Used to differentiate multiple results for one commit
-          category: my-analysis-tool
+#      - name: Check if SARIF file exists
+#        run: 'test -f "results.sarif" || touch "results.sarif"'
+#
+#      - name: Upload SARIF file
+#        uses: github/codeql-action/upload-sarif@v2
+#        with:
+#          # Path to SARIF file relative to the root of the repository
+#          sarif_file: results.sarif
+#          # Optional category for the results
+#          # Used to differentiate multiple results for one commit
+#          category: my-analysis-tool
