--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -29,7 +29,7 @@ jobs:
     #   - https://gh.io/using-larger-runners
     # Consider using larger runners for possible analysis time improvements.
     runs-on: ${{ matrix.language == 'swift' && 'macos-latest' || 'ubuntu-latest' }}
-    timeout-minutes: ${{ matrix.language == 'swift' && 120 || 360 }}
+    timeout-minutes: ${{ matrix.language == '-x swift' && 120 || 360 }}
     permissions:
       actions: read
       contents: read
@@ -48,7 +48,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Java11
+      - name: Setup Java17
         uses: actions/setup-java@v1
         with:
           java-version: '17' # The JDK version to make available on the path.
