--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.vesion}</version>
+						<version>2.19.1</version>
 						<configuration>
 							<suiteXmlFiles>
 								<suiteXmlFile>testng_RegressionSuite.xml</suiteXmlFile>
@@ -188,7 +188,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.vesion}</version>
+						<version>$2.19.1</version>
 						<configuration>
 							<suiteXmlFiles>
 								<suiteXmlFile>testng_SmokeSuite.xml</suiteXmlFile>
@@ -219,7 +219,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.vesion}</version>
+						<version>2.19.1</version>
 						<configuration>
 							<suiteXmlFiles>
 								<suiteXmlFile>
